--- a/index copy 2.html
+++ b/index copy 2.html
@@ -16,6 +16,7 @@
 		<div id="container">
 		<div class="navbar-inner navbar-fixed-top">
 		<!-- About |	Scripts | Why use it? | How to | Something missing? -->
+		<span class="divider-vertical"></span>
 		</div>
 			<h1 class="fontface">Open<span class="redish">CDN</span>.me</h1>
 			<img src="new/images/map.png" width="430" height="217" alt="map" />
@@ -35,5 +36,18 @@
 			<img src="new/images/icons/Facebook.png" width="33" height="32" alt="facebook" /> <a href="http://facebook.com" class="social-facebook">Facebook</a>
 			<img src="new/images/icons/Twitter.png" width="33" height="33" alt="twitter" /> <a href="http://twitter.com" class="social-twitter">Twitter</a>
 		</div>
+		<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-27920463-3']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 	</body>
 </html>
