--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 			<div align="center" ng-view></div>
 			<h2>Why should I want to use it?</h2>
 			<p>Being on your own, YOU must be sure that the script you are using is always up to date and you have the latest version available. With us, you don't have to bother. OpenCDN.me will take care of that.</p>
+			<h2>How to use our repository?</h2>
+<p>For example you want to use jQuery on your site. Then just paste this code into your HEAD section</p>
+<script src="https://gist.github.com/3035406.js?file=head section"></script>
 			<span style="font-size: 20px; line-height: 40px;">Find us on social networks:</span>
 			<br />
 			<img src="new/images/icons/Google+.png" width="33" height="32" alt="g+" /> <a href="https://plus.google.com/u/0/109138097244725036901" class="social-gplus">Google+</a>
