--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 			<h2>What are you looking for?</h2>
 			<div align="center" ng-view></div>
 			<br />
+			<h2>Where are the files served from?</h2>
+			<img src="images/datacenters.png" alt="datacenters" />
 			<h2>Why should I want to use it?</h2>
 			<p>Being on your own, YOU must be sure that the script you are using is always up to date and you have the latest version available. With us, you don't have to bother. OpenCDN.me will take care of that.</p>
 			<br />
