--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			Everyone is using javascript libraries nowadays but linking to several sources might be annoying. There is Google Ajax API and other services but they just choose what's better for you and host only most popular libraries.</p>
 			<p>With OpenCDN.me you have them all in one place. That's neat right?<br /><br /></p>
 			<h2>What are you looking for?</h2>
-			<small>There is over <span class="redish">40</span> available</small>
+			<small>There are over <span class="redish">40</span> available</small>
 			<div align="center" class="lister" ng-view></div>
 			<br />
 			<h2>Where are the files served from?</h2>
