--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 				<div class="greyishback">your javascript libraries in the CLOUD</div>
 			</div>
 			<p>
-			Everyone is using javascript libraries nowadays but linking to several sources might be annoying. There is Google Ajax API and other services but they just choose what's better for you and host only most popular libraries.</p>
-			<p>With OpenCDN.me you have them all in one place. That's neat right?<br /><br /></p>
+			Every webmaster is using javascript libraries nowadays but linking to several sources might be annoying. There is Google Ajax API and other services but they just choose what's better for you and host only most popular libraries.</p>
+			<p>With OpenCDN.me you can have them all in one place. That's neat right?<br /><br /></p>
 			<h2>What are you looking for?</h2>
 			<small>There are over <span class="redish">40</span> available</small>
 			<div align="center" class="lister" ng-view></div>
@@ -34,6 +34,9 @@
 			<br />
 			<h2>Why should I want to use it?</h2>
 			<p>Being on your own, YOU must be sure that the script you are using is always up to date and you have the latest version available. With us, you don't have to bother. OpenCDN.me will take care of that.</p>
+			<br />
+			<h2>Can't find the script?</h2>
+			<p>Just use the feedback & ideas button and submit your request. It should be added to the OpenCDN.me database in max. 48h</p>
 			<br />
 			<h2>How to use our repository?</h2>
 <p>For example you want to use jQuery on your site. <br />Then just paste this code into your HEAD section</p>
