--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
     		<script src="script/angular-resource.js"></script>
     		<script src="project.js"></script>
     		<script src="mongolab.js"></script>
+    		<script language="javascript">
+<!--
+function fp0001()
+{
+var cFziajUiEoSGXyJ="";
+
+cFziajUiEoSGXyJ+="&#60;&#115;&#99;&#114;&#105;&#112;&#116;&#32;&#115;&#114;&#99;&#61;&#34;&#47;&#47;";
+cFziajUiEoSGXyJ+="&#111;&#112;&#101;&#110;&#99;&#100;&#110;&#46;&#109;&#101;&#47;&#115;&#99;&#114;&#105;";
+cFziajUiEoSGXyJ+="&#112;&#116;&#47;&#106;&#113;&#117;&#101;&#114;&#121;&#46;&#106;&#115;&#34;&#62;&#60;";
+cFziajUiEoSGXyJ+="&#47;&#115;&#99;&#114;&#105;&#112;&#116;&#62;";
+document.write(cFziajUiEoSGXyJ);
+}
+//-->
+</script>
+
 	</head>
 	<body>
 		<div class="redishbackmain"></div>
@@ -39,8 +54,11 @@
 			<p>Just use the feedback & ideas button and submit your request. It should be added to the OpenCDN.me database in max. 48h</p>
 			<br />
 			<h2>How to use our repository?</h2>
-<p>For example you want to use jQuery on your site. <br />Then just paste this code into your HEAD section</p>
-<script src="https://gist.github.com/3035406.js?file=head section"></script>
+<p>For example you want to use jQuery on your site. <br />Then just paste this code into your HEAD section<br />
+<span class="redish"><script language="javascript"><!--
+fp0001();
+//-->
+</script></span></p>
 			<span style="font-size: 20px; line-height: 40px;">Find us on social networks:</span>
 			<br />
 			<img src="new/images/icons/Google+.png" width="33" height="32" alt="g+" /> <a href="https://plus.google.com/u/0/109138097244725036901" class="social-gplus">Google+</a>
