--- a/index.html
+++ b/index.html
@@ -39,11 +39,8 @@
 			<p>Just use the feedback & ideas button and submit your request. It should be added to the OpenCDN.me database in max. 48h</p>
 			<br />
 			<h2>How to use our repository?</h2>
-<p>For example you want to use jQuery on your site. <br />Then just paste this code into your HEAD section<br />
-<span class="redish"><script language="javascript"><!--
-fp0001();
-//-->
-</script></span></p>
+<p>For example you want to use jQuery on your site. <br />Then just paste this code into your HEAD section</p>
+<script src="https://gist.github.com/3035406.js?file=head section"></script>
 			<span style="font-size: 20px; line-height: 40px;">Find us on social networks:</span>
 			<br />
 			<img src="new/images/icons/Google+.png" width="33" height="32" alt="g+" /> <a href="https://plus.google.com/u/0/109138097244725036901" class="social-gplus">Google+</a>
