--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<br />
 			<h2>How to use our repository?</h2>
 <p>For example you want to use jQuery on your site. <br />Then just paste this code into your HEAD section<br />
-<span class="redish">&lt;script src="//opencdn.me/script/jquery.js"&gt;&lt;/script&gt;</span><br /><br />
+<code><span style="font-size:15px; line-height: 55px;" class="social-facebook">&lt;script src="//opencdn.me/script/jquery.js"&gt;&lt;/script&gt;</span></code><br />
 </p>
 			<h2 style="line-height: 40px;">Find us on social networks:</span>
 			<br />
