--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<br />
 			<h2>How to use our repository?</h2>
 <p>For example you want to use jQuery on your site. <br />Then just paste this code into your HEAD section<br />
-<code><span style="font-size:15px; line-height: 55px;" class="social-facebook">&lt;script src="//opencdn.me/script/jquery.js"&gt;&lt;/script&gt;</span></code><br />
+<code><span style="font-size:15px; line-height: 55px;"><span class="blue">&lt;script</span> <span class="lightblue">src</span><span class="blue">=</span><span class="green">"//opencdn.me/script/jquery.js"</span><span class="blue">&gt;&lt;/script&gt;</span></span></code><br />
 </p>
 			<h2 style="line-height: 40px;">Find us on social networks:</span>
 			<br />
