--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="project">
+<html class="ng-csp" ng-app="project">
 	<head>
 		<meta charset="utf-8">
 		<title>OpenCDN.me - your javascript libraries in the CLOUD</title>
