--- a/list.html
+++ b/list.html
@@ -1,5 +1,5 @@
 <div align="center"><input type="text" ng-model="search" class="search-query" placeholder="start typing"></div>
-<table id="jsTable" class="tablesorter">
+<table>
   <thead>
   <tr>
     <th>Name</th>
