--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<p>With OpenCDN.me you can have them all in one place. That's neat right?<br /><br /></p>
 			<h2>What are you looking for?</h2>
 			<small>There are over <span class="redish">60</span> available</small>
-			<div align="center" class="lister" ng-view></div>
+			<div align="center" ng-view></div>
 			<br />
 			<h2>Where are the files served from?</h2>
 			<img src="images/datacenters.png" alt="datacenters" />
