--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<div id="container">
 		<div class="navbar-inner navbar-fixed-top">
 		<!-- About |	Scripts | Why use it? | How to | Something missing? -->
+		<g:plusone size="medium"></g:plusone>
 		</div>
 			<h1 class="fontface">Open<span class="redish">CDN</span>.me</h1>
 			<img src="new/images/map.png" width="430" height="217" alt="map" />
@@ -48,5 +49,12 @@
 			<img src="new/images/icons/Facebook.png" width="33" height="32" alt="facebook" /> <a href="http://facebook.com" class="social-facebook">Facebook</a>
 			<img src="new/images/icons/Twitter.png" width="33" height="33" alt="twitter" /> <a href="http://twitter.com" class="social-twitter">Twitter</a>
 		</div>
+		<script type="text/javascript">
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = '//apis.google.com/js/plusone.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+</script>
 	</body>
 </html>
