--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div id="container">
 		<div class="navbar-inner navbar-fixed-top">
 		<!-- About |	Scripts | Why use it? | How to | Something missing? -->
-		<g:plusone size="medium"></g:plusone>
+		Share the wealth: <g:plusone size="medium"></g:plusone>
 		</div>
 			<h1 class="fontface">Open<span class="redish">CDN</span>.me</h1>
 			<img src="new/images/map.png" width="430" height="217" alt="map" />
