--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 		<div id="container">
 		<div class="navbar-inner navbar-fixed-top">
 		<!-- About |	Scripts | Why use it? | How to | Something missing? -->
-		Share the wealth: <g:plusone size="medium"></g:plusone>
+		<a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
+		<g:plusone size="medium"></g:plusone>
 		</div>
 			<h1 class="fontface">Open<span class="redish">CDN</span>.me</h1>
 			<img src="new/images/map.png" width="430" height="217" alt="map" />
@@ -56,5 +57,6 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
   })();
 </script>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 	</body>
 </html>
