--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div id="container">
 		<div class="navbar-inner navbar-fixed-top">
 		<!-- About |	Scripts | Why use it? | How to | Something missing? -->
-		<a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
+		<a href="https://twitter.com/share" class="twitter-share-button" data-via="transetka">Tweet</a>
 		<g:plusone size="medium"></g:plusone>
 		</div>
 			<h1 class="fontface">Open<span class="redish">CDN</span>.me</h1>
