--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="navbar-inner navbar-fixed-top">
 		<!-- About |	Scripts | Why use it? | How to | Something missing? -->
 		<a href="https://twitter.com/share" class="twitter-share-button" data-via="OpenCDN">Tweet</a>
-		<g:plusone size="medium"></g:plusone>
+		<g:plusone size="large"></g:plusone>
 		</div>
 			<h1 class="fontface">Open<span class="redish">CDN</span>.me</h1>
 			<img src="new/images/map.png" width="430" height="217" alt="map" />
@@ -48,7 +48,7 @@
 			<br />
 			<img src="new/images/icons/Google+.png" width="33" height="32" alt="g+" /> <a href="https://plus.google.com/u/0/109138097244725036901" class="social-gplus">Google+</a>
 			<img src="new/images/icons/Facebook.png" width="33" height="32" alt="facebook" /> <a href="http://facebook.com" class="social-facebook">Facebook</a>
-			<img src="new/images/icons/Twitter.png" width="33" height="33" alt="twitter" /> <a href="http://twitter.com" class="social-twitter">Twitter</a>
+			<img src="new/images/icons/Twitter.png" width="33" height="33" alt="twitter" /> <a href="http://twitter.com/OpenCDN" class="social-twitter">Twitter</a>
 		</div>
 		<script type="text/javascript">
   (function() {
