--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="navbar-inner navbar-fixed-top">
 		<!-- About |	Scripts | Why use it? | How to | Something missing? -->
 		<a href="https://twitter.com/share" class="twitter-share-button" data-via="OpenCDN">Tweet</a>
-		<g:plusone size="large"></g:plusone>
+		<g:plusone size="medium"></g:plusone>
 		</div>
 			<h1 class="fontface">Open<span class="redish">CDN</span>.me</h1>
 			<img src="new/images/map.png" width="430" height="217" alt="map" />
