--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<h2 style="line-height: 40px;">Find us on social networks:</span>
 			<br />
 			<img src="new/images/icons/Google+.png" width="33" height="32" alt="g+" /> <a href="https://plus.google.com/u/0/109138097244725036901" class="social-gplus">Google+</a>
-			<img src="new/images/icons/Facebook.png" width="33" height="32" alt="facebook" /> <a href="http://facebook.com" class="social-facebook">Facebook</a>
+			<!--  <img src="new/images/icons/Facebook.png" width="33" height="32" alt="facebook" /> <a href="http://facebook.com" class="social-facebook">Facebook</a> -->
 			<img src="new/images/icons/Twitter.png" width="33" height="33" alt="twitter" /> <a href="http://twitter.com/OpenCDN" class="social-twitter">Twitter</a>
 		</div>
 		<script type="text/javascript">
