--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html class="ng-csp" ng-app="project">
+<html class="ng-csp" ng-app="project" xmlns:ng="http://angularjs.org/">
 	<head>
 		<meta charset="utf-8">
 		<title>OpenCDN.me - your javascript libraries in the CLOUD</title>
 		<link rel="shortcut icon" href="https://github.com/favicon.ico" type="image/x-icon" />
-		<link rel="stylesheet" href="new/fonts/stylesheet.css" type="text/css" charset="utf-8">
-		<link rel="stylesheet" href="stylesheets/style.css" type="text/css" charset="utf-8">
+		<link rel="stylesheet" href="new/fonts/stylesheet.css" type="text/css">
+		<link rel="stylesheet" href="stylesheets/style.css" type="text/css">
 		    <script src="script/angular.js"></script>
     		<script src="script/angular-resource.js"></script>
     		<script src="project.js"></script>
@@ -29,7 +29,7 @@
 			<p>With OpenCDN.me you can have them all in one place. That's neat right?<br /><br /></p>
 			<h2>What are you looking for?</h2>
 			<small>There are over <span class="redish">60</span> available</small>
-			<div align="center" ng-view></div>
+			<div class="ng-view"></div>
 			<br />
 			<h2>Where are the files served from?</h2>
 			<img src="images/datacenters.png" alt="datacenters" />
@@ -44,7 +44,7 @@
 <p>For example you want to use jQuery on your site. <br />Then just paste this code into your HEAD section<br />
 <code><span style="font-size:15px; line-height: 55px;"><span class="blue">&lt;script</span> <span class="lightblue">src</span><span class="blue">=</span><span class="green">"//opencdn.me/script/jquery.js"</span><span class="blue">&gt;&lt;/script&gt;</span></span></code><br />
 </p>
-			<h2 style="line-height: 40px;">Find us on social networks:</span>
+			<h2 style="line-height: 40px;">Find us on social networks:</h2>
 			<br />
 			<img src="new/images/icons/Google+.png" width="33" height="32" alt="g+" /> <a href="https://plus.google.com/u/0/109138097244725036901" class="social-gplus">Google+</a>
 			<!--  <img src="new/images/icons/Facebook.png" width="33" height="32" alt="facebook" /> <a href="http://facebook.com" class="social-facebook">Facebook</a> -->
