--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="ng-csp" ng-app="project" xmlns:ng="http://angularjs.org/">
+<html class="ng-csp" ng-app="project">
 	<head>
 		<meta charset="utf-8">
 		<title>OpenCDN.me - your javascript libraries in the CLOUD</title>
@@ -38,7 +38,7 @@
 			<p>Being on your own, YOU must be sure that the script you are using is always up to date and you have the latest version available. With us, you don't have to bother. OpenCDN.me will take care of that.</p>
 			<br />
 			<h2>Can't find the script?</h2>
-			<p>Just use the feedback & ideas button and submit your request. It should be added to the OpenCDN.me database in max. 48h</p>
+			<p>Just use the feedback &amp; ideas button and submit your request. It should be added to the OpenCDN.me database in max. 48h</p>
 			<br />
 			<h2>How to use our repository?</h2>
 <p>For example you want to use jQuery on your site. <br />Then just paste this code into your HEAD section<br />
