--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 <p>For example you want to use jQuery on your site. <br />Then just paste this code into your HEAD section<br />
 <code><span style="font-size:15px; line-height: 55px;"><span class="blue">&lt;script</span> <span class="lightblue">src</span><span class="blue">=</span><span class="green">"//opencdn.me/script/jquery.js"</span><span class="blue">&gt;&lt;/script&gt;</span></span></code><br />
 </p>
-			<h2 style="line-height: 40px;">Find us on social networks:</h2>
-			<br />
+			<h2>Find us on social networks:</h2>
 			<img src="new/images/icons/Google+.png" width="33" height="32" alt="g+" /> <a href="https://plus.google.com/u/0/109138097244725036901" class="social-gplus">Google+</a>
 			<!--  <img src="new/images/icons/Facebook.png" width="33" height="32" alt="facebook" /> <a href="http://facebook.com" class="social-facebook">Facebook</a> -->
 			<img src="new/images/icons/Twitter.png" width="33" height="33" alt="twitter" /> <a href="http://twitter.com/OpenCDN" class="social-twitter">Twitter</a>
