--- a/index copy.html
+++ b/index copy.html
@@ -15,7 +15,7 @@
 		<div class="redishbackmain"></div>
 		<div id="container">
 		<div class="navbar-inner navbar-fixed-top">
-		<a href="/">About</a> |	<a href="list">Scripts</a> | Why use it? | How to | Something missing?
+		<!-- About |	Scripts | Why use it? | How to | Something missing? -->
 		<a href="https://twitter.com/share" class="twitter-share-button" data-via="OpenCDN"></a>
 		<g:plusone size="medium"></g:plusone>
 		</div>
@@ -24,6 +24,9 @@
 			<div class="redishback">
 				<div class="greyishback">your javascript libraries in the CLOUD</div>
 			</div>
+			<p>
+			Every webmaster is using javascript libraries nowadays but linking to several sources might be annoying. There is Google Ajax API and other services but they just choose what's better for you and host only most popular libraries.</p>
+			<p>With OpenCDN.me you can have them all in one place. That's neat right?<br /><br /></p>
 			<div class="ng-view"></div>
 			<br />
 			<h2>Where are the files served from?</h2>
