--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="redishbackmain"></div>
 		<div id="container">
 		<div class="navbar-inner navbar-fixed-top">
-		<a href="/">About</a> |	<a href="list">Scripts</a> | Why use it? | How to | Something missing?
+		<a href="#/">About</a> | <a href="#/list">Scripts</a> | Why use it? | How to | Something missing?
 		<a href="https://twitter.com/share" class="twitter-share-button" data-via="OpenCDN"></a>
 		<g:plusone size="medium"></g:plusone>
 		</div>
