--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="redishbackmain"></div>
 		<div id="container">
 		<div class="navbar-inner navbar-fixed-top">
-		<a href="#/">About</a> | <a href="#/list">Scripts</a> | Why use it? | How to | Something missing?
+		<a href="#/">About</a> | <a href="#/list">Scripts</a> | <a href="#/datacenters">Datacenters</a> | Why use it? | How to | Something missing?
 		<a href="https://twitter.com/share" class="twitter-share-button" data-via="OpenCDN"></a>
 		<g:plusone size="medium"></g:plusone>
 		</div>
@@ -25,9 +25,6 @@
 				<div class="greyishback">your javascript libraries in the CLOUD</div>
 			</div>
 			<div class="ng-view"></div>
-			<br />
-			<h2>Where are the files served from?</h2>
-			<img src="images/datacenters.png" alt="datacenters" />
 			<br />
 			<h2>Why should I want to use it?</h2>
 			<p>Being on your own, YOU must be sure that the script you are using is always up to date and you have the latest version available. With us, you don't have to bother. OpenCDN.me will take care of that.</p>
