--- a/intro.html
+++ b/intro.html
@@ -1,2 +1,2 @@
 <p>Every webmaster is using javascript libraries nowadays but linking to several sources might be annoying. There is Google Ajax API and other services but they just choose what's better for you and host only most popular libraries.</p>
-<p>With OpenCDN.me you can have them all in one place. That's neat right?<br /><br /></p>
+<p>With OpenCDN.me you can have them all in one place. That's neat right?</p>
