--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="redishbackmain"></div>
 		<div id="container">
 		<div class="navbar-inner navbar-fixed-top">
-		<a href="#/">About</a> | <a href="#/list">Scripts</a> | <a href="#/datacenters">Datacenters</a> | Why use it? | How to | Something missing?
+		<a href="#/">About</a> | <a href="#/list">Scripts</a> | <a href="#/datacenters">Datacenters</a> | <a href="#/why">Why use it?</a> | <a href="#/how">How to</a> | <a href="#/missing">Something missing?</a>
 		<a href="https://twitter.com/share" class="twitter-share-button" data-via="OpenCDN"></a>
 		<g:plusone size="medium"></g:plusone>
 		</div>
@@ -26,16 +26,6 @@
 			</div>
 			<div class="ng-view"></div>
 			<br />
-			<h2>Why should I want to use it?</h2>
-			<p>Being on your own, YOU must be sure that the script you are using is always up to date and you have the latest version available. With us, you don't have to bother. OpenCDN.me will take care of that.</p>
-			<br />
-			<h2>Can't find the script?</h2>
-			<p>Just use the feedback &amp; ideas button and submit your request. It should be added to the OpenCDN.me database in max. 48h</p>
-			<br />
-			<h2>How to use our repository?</h2>
-<p>For example you want to use jQuery on your site. <br />Then just paste this code into your HEAD section<br />
-<code><span style="font-size:15px; line-height: 55px;"><span class="blue">&lt;script</span> <span class="lightblue">src</span><span class="blue">=</span><span class="green">"//opencdn.me/script/jquery.js"</span><span class="blue">&gt;&lt;/script&gt;</span></span></code><br />
-</p>
 			<h2>Find us on social networks:</h2>
 			<img src="new/images/icons/Google+.png" width="33" height="32" alt="g+" /> <a href="https://plus.google.com/u/0/109138097244725036901" class="social-gplus">Google+</a>
 			<!--  <img src="new/images/icons/Facebook.png" width="33" height="32" alt="facebook" /> <a href="http://facebook.com" class="social-facebook">Facebook</a> -->
