--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		<link rel="shortcut icon" href="https://github.com/favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="new/fonts/stylesheet.css" type="text/css">
 		<link rel="stylesheet" href="stylesheets/style.css" type="text/css">
-		    <script src="script/angular.js"></script>
-    		<script src="script/angular-resource.js"></script>
+		    <script data-cfasync="true" src="script/angular.js"></script>
+    		<script data-cfasync="true" src="script/angular-resource.js"></script>
     		<script src="project.js"></script>
-    		<script src="mongolab.js"></script>
+    		<script data-cfasync="true" src="mongolab.js"></script>
 	</head>
 	<body>
 		<div class="redishbackmain"></div>
