--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		    <script data-cfasync="true" src="script/angular.js"></script>
     		<script data-cfasync="true" src="script/angular-resource.js"></script>
     		<script src="project.js"></script>
-    		<script data-cfasync="true" src="mongolab.js"></script>
+    		<script src="mongolab.js"></script>
 	</head>
 	<body>
 		<div class="redishbackmain"></div>
