--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 		<link rel="stylesheet" href="new/fonts/stylesheet.css" type="text/css">
 		<link rel="stylesheet" href="stylesheets/style.css" type="text/css">
 		    <script data-cfasync="true" src="script/angular.js"></script>
-    		<script data-cfasync="true" src="script/angular-resource.js"></script>
-    		<script src="project.js"></script>
-    		<script src="mongolab.js"></script>
+    		<script src="script/angular-resource.js"></script>
+    		<script data-cfasync="true" src="project.js"></script>
+    		<script data-cfasync="true" src="mongolab.js"></script>
 	</head>
 	<body>
 		<div class="redishbackmain"></div>
