--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="shortcut icon" href="https://github.com/favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="new/fonts/stylesheet.css" type="text/css">
 		<link rel="stylesheet" href="stylesheets/style.css" type="text/css">
-		    <script data-cfasync="true" src="script/angular.js"></script>
+		    <script src="script/angular.js"></script>
     		<script src="script/angular-resource.js"></script>
     		<script data-cfasync="true" src="project.js"></script>
     		<script data-cfasync="true" src="mongolab.js"></script>
