--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<link rel="stylesheet" href="stylesheets/style.css" type="text/css">
 		    <script src="script/angular.js"></script>
     		<script src="script/angular-resource.js"></script>
-    		<script data-cfasync="true" src="project.js"></script>
-    		<script data-cfasync="true" src="mongolab.js"></script>
+    		<script src="project.js"></script>
+    		<script src="mongolab.js"></script>
 	</head>
 	<body>
 		<div class="redishbackmain"></div>
