--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div class="redishbackmain"></div>
 		<div id="container">
 		<div class="navbar-inner navbar-fixed-top">
-		<a href="#/">About</a> | <a href="#/list">Scripts</a> | <a href="#/datacenters">Datacenters</a> | <a href="#/why">Why use it?</a> | <a href="#/how">How to</a> | <a href="#/missing">Something missing?</a>
+		<a class="navis" href="#/">About</a> | <a class="navis" href="#/list">Scripts</a> | <a class="navis" href="#/datacenters">Datacenters</a> | <a class="navis" href="#/why">Why use it?</a> | <a class="navis" href="#/how">How to use it?</a> | <a class="navis" href="#/missing">Something missing?</a>
 		</div>
 			<h1 class="fontface">Open<span class="redish">CDN</span>.me</h1>
 			<img src="new/images/map.png" width="430" height="217" alt="map" />
